# ioptics

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: adjoint_variation_xor_example.ipynb  async_hybrid_iris_example.ipynb  optical_cnn_mnist_test.ipynb  physical_bernoulli_example.ipynb  utils.py
ioptics/: __init__.py  backward_functions.py  components.py  differentiators.py  layers.py  models.py  nonlinear.py  simulator.py  training.py
tests/: test_backward_functions.py  test_components.py  test_differentiator.py  test_layers.py  test_models.py  test_nonlinear.py  test_simulator_p0.py
