[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ioptics"
version = "0.1.0"
description = "Integrated optical neural network simulation and training framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.7.1,<3",
  "torchvision>=0.23.0",
  "matplotlib>=3.10.7,<4",
  "numpy>=2.3.3,<3",
  "scikit-learn>=1.7.2,<2",
  "pandas>=2.3.3,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10",
  "jupyterlab>=4.4.10,<5",
]

[tool.setuptools.packages.find]
include = ["ioptics", "ioptics.*"]
